upate style.css

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --color-primary: #4B69FD;
-    --color-secondary: #FFF9EB;
+    --color-primary: #72cb6e;
+    --color-secondary: #fbfbfb;
     --color-tertiary: #C4C4C4;
-    --color-button: #fe652b;
+    --color-button: #72cb6e;
     --color-button-hover: #e55720;
     --color-text: #444444;
     --color-white: #FFFFFF;
